Update documentation of STBEasyFont